# research-intelligence-agents

./: .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  DEMO_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.base  FUTURE_ROADMAP.md  FUTURE_WORK.md  HACKATHON_SUBMISSION.md  README.md  TEMPORAL_RELATIONSHIP_FIX.md  cloudbuild-alert-worker.yaml  cloudbuild-arxiv-watcher.yaml  cloudbuild-base.yaml  cloudbuild-graph-service.yaml  cloudbuild-graph-updater.yaml  cloudbuild-intake-pipeline.yaml  cloudbuild-orchestrator.yaml  pyproject.toml  requirements.txt  test_sendgrid_email.py
docs/: ARCHITECTURE.md  CODEBASE_AUDIT_2025-11-08.md
docs/guides/: DEPLOYMENT.md  GCP_ARXIV_SETUP.md  GENAI_SDK_MIGRATION.md  PHASE_0_SETUP_GUIDE.md  UV_SETUP.md
docs/planning/: IMPLEMENTATION_PLAN.md  KNOWLEDGE_GRAPH_DESIGN.md  MULTIMODAL_CONTENT_STRATEGY.md  PHASE_1_2_COMPONENTS.md  PHASE_2_1_SUMMARY.md  PHASE_2_PLAN.md  PHASE_3_COMPLETE.md  PHASE_3_DEPLOYMENT_PLAN.md  PIPELINE_ORCHESTRATION_ANALYSIS.md  PROJECT_STRUCTURE.md  SEMANTIC_SEARCH_ROADMAP.md  STATUS.md  research-intelligence-platform-complete-plan.md
docs/reference/: HackathonBrief.md
scripts/: README.md  add_ai_papers.py  add_bert_paper.py  add_interesting_relationships.py  add_papers.py  add_stat_ml_papers.py  backfill_manual_upload_categories.py  backfill_paper_metadata.py  backup_relationships.py  check_manual_upload_categories.py  check_papers.py  cleanup_demo_papers.py  cleanup_duplicate_rules.py  cleanup_temporal_violations.py  compare_relationship_sets.py  convert_subscriptions_to_push.sh  debug_retrieval.py  delete_all_papers.py  deploy_all.sh  deploy_all_services.sh  deploy_jobs.sh  deploy_pipeline_services.sh  deploy_services.sh  deploy_with_verification.sh  download_test_papers.py  fix_relationships.py  generate_embeddings.py  list_papers.py  merge_unique_relationships.py  populate_relationships.py  regenerate_all_relationships.py  regenerate_all_relationships_parallel.py  regenerate_lost_relationships.py  regenerate_options_5_6_only.py  regenerate_with_embeddings.py  reingest_papers.py  restore_relationships.py  reverse_temporal_violations.py  seed_demo_data.py  seed_demo_papers.py  (+21 more)
src/agents/: base.py
src/pipelines/: __init__.py  ingestion_pipeline.py  qa_pipeline.py
src/storage/: firestore_client.py
src/tools/: graph_queries.py  matching.py  retrieval.py
src/utils/: README.md  arxiv_fetcher.py  config.py  embeddings.py
tests/: conftest.py
tests/fixtures/: PHASE_1_1_COMPLETION_SUMMARY.txt  answer_agent_test_results.txt  app_name_standardization_summary.txt  download_papers_results.txt  entity_agent_standardized_test.txt  entity_agent_test_results.txt  indexer_agent_summary.txt  indexer_agent_test_results.txt  ingestion_pipeline_test_results.txt  pdf_reader_test_results.txt  phase_1_1_go_no_go_results.txt  phase_1_2_comprehensive_results.txt  phase_1_2_comprehensive_results_perfect.txt  phase_1_2_go_no_go_results.txt  phase_1_2_go_no_go_results_final.txt  (+6 more)
(+63 files in other folders)
